[gd_scene load_steps=6 format=3 uid="uid://1fh05cuk0h6v"]

[ext_resource type="Script" path="res://scenes/entities/npc/sell_tab/sell_tab.gd" id="1_3ld75"]
[ext_resource type="Script" path="res://scenes/entities/npc/sell_tab/grid.gd" id="2_x058p"]
[ext_resource type="Resource" uid="uid://bqmtwlv4wv3os" path="res://scenes/inventory/db/inventory.tres" id="3_yra44"]
[ext_resource type="LabelSettings" uid="uid://bdbncs3huvmtp" path="res://style/labe_style.tres" id="4_c4e5f"]
[ext_resource type="Script" path="res://scenes/entities/npc/sell_tab/info.gd" id="4_ghwad"]

[node name="PlayerSellTab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_3ld75")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HSplitContainer" node_paths=PackedStringArray("info")]
layout_mode = 2
columns = 6
script = ExtResource("2_x058p")
info = NodePath("../VBoxContainer")
inventory = ExtResource("3_yra44")
type = "player_sell"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("4_ghwad")
inventory = ExtResource("3_yra44")

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Thông tin"
label_settings = ExtResource("4_c4e5f")
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="HSplitContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="ButtonSell" type="Button" parent="HSplitContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "Bán"
icon_alignment = 1

[node name="ButtonSellAll" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Bán hết"

[connection signal="pressed" from="HSplitContainer/VBoxContainer/HSplitContainer/ButtonSell" to="HSplitContainer/VBoxContainer" method="_on_button_sell_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/ButtonSellAll" to="HSplitContainer/VBoxContainer" method="_on_button_sell_all_pressed"]
